--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -12,8 +12,9 @@
         white-space: break-spaces;
         /* word-break: break-all; */
     }
-    td#txnNo{
-         white-space: break-spaces;
+
+    td#txnNo {
+        white-space: break-spaces;
     }
 </style>
 @using (Html.BeginForm("PayoutRequestList", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
@@ -84,7 +85,7 @@
                                         <th>Gross Amount</th>
                                         <th>Bank Details</th>
                                         @*<th>IFSC Code</th>
-                                        <th>Account No.</th>*@
+                                            <th>Account No.</th>*@
                                         <th>Status</th>
                                         <th>Requested Date</th>
                                         <th style="white-space: break-spaces;">Approved/ Declined Date</th>
@@ -104,7 +105,7 @@
                                                     {
                                                         <td>
 
-                                                            <input class="checkBoxClass" name="chkSelect_ @i" id="chkSelect_ @i" type="checkbox" value="@Item.Amount"/>
+                                                            <input class="checkBoxClass" name="chkSelect_ @i" id="chkSelect_ @i" type="checkbox" />
                                                             <input type="hidden" name="PK_RequestID_ @i" id="PK_RequestID_ @i" value="@Item.PK_RequestID" />
                                                             <input type="hidden" id="hdRows" name="hdRows" value="@i" />
                                                         </td>
@@ -123,7 +124,7 @@
                                                     <td>@Item.ProcessingFee</td>
                                                     <td>@Item.GrossAmount</td>
                                                     @*<td>@Item.IFSCCode</td>
-                                                    <td>@Item.MemberAccNo</td>*@
+                                                        <td>@Item.MemberAccNo</td>*@
                                                     <td>
                                                         <a href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup1('@Item.PaymentMode');">View</a>
                                                     </td>
@@ -177,9 +178,18 @@
                 <div class="modal-body" style="color: black">
                     <div class="row">
                         <div class="col-md-12">
+                            @*<span style="color:red">Total Amount:</span> <span style="color:red" id="total"></span>*@
+                        </div>
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label>Narration</label>
-                                @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "Narration" })
+                                @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "Narration", @textmode = "multiline" })
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Transaction Date</label>
+                                @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "dd/mm/yyyy" })
                             </div>
                         </div>
                     </div>
@@ -196,7 +206,7 @@
         </div>
     </div>
 
-    
+
     @Html.HiddenFor(m => m.RequestID)
     <div class="modal fade md" id="myModal1" role="dialog" style="display: none;padding-top:100px;">
         <div class="modal-dialog">
@@ -228,7 +238,6 @@
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
 <script>
-
     if ($("#st").val() != 0) {
         $("#Status").val($("#st").val()).attr("selected", "selected");
     }
@@ -241,7 +250,17 @@
         {
             // mode: "range"
         });
+   
+    const today = new Date();
+    const yyyy = today.getFullYear();
+    let mm = today.getMonth() + 1; // Months start at 0!
+    let dd = today.getDate();
 
+    if (dd < 10) dd = '0' + dd;
+    if (mm < 10) mm = '0' + mm;
+    const to = dd + '/' + mm + '/' + yyyy;
+    document.getElementById('TransactionDate').value = to;
+ 
     function isNumberKey(evt) {
 
         var charCode = (evt.which) ? evt.which : event.keyCode;
@@ -253,6 +272,7 @@
     }
 
     function Validate() {
+        jQuery.noConflict();
         $(".errortext").removeClass("errortext");
         if ($('#LoginId').val() == '') {
             $("#LoginId").addClass('errortext');
@@ -287,6 +307,7 @@
         $("#myModal").hide();
         //$('body').removeClass().removeAttr('style'); $('.modal-backdrop').remove();
     }
+    jQuery.noConflict();
     $(document).ready(function () {
         var Amount = 0;
         debugger;
@@ -294,31 +315,36 @@
         $('#ckbCheckAll').on('click', function () {
             debugger;
             if (this.checked) {
-                $('.checkBoxClass').each(function () {
+                $('.checkBoxClass').each(function (index) {
+                    debugger;
                     this.checked = true;
-                    Amount = parseInt(Amount) + parseInt($(".checkBoxClass:checked").val());
+                    //Amount = parseInt(Amount) + parseInt($(this).val());
+                    //$("#total").text(Amount);
                 });
             } else {
                 $('.checkBoxClass').each(function () {
                     this.checked = false;
                 });
             }
-           
+
             //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
         });
 
 
     });
-
+    jQuery.noConflict();
+    var Amount1 = 0;
     $('.checkBoxClass').on('click', function () {
         debugger;
+        //Amount1 = parseInt(Amount1) + parseInt($(this).val());
+        //$("#total").text(Amount1);
         if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
             $('#ckbCheckAll').prop('checked', true);
         } else {
             $('#ckbCheckAll').prop('checked', false);
         }
         //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
-        });
+    });
 
 
     //$('#IsDownline').click(function () {
