--- a/MyTrade/Views/Master/PackageMaster.cshtml
+++ b/MyTrade/Views/Master/PackageMaster.cshtml
@@ -56,7 +56,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3" id="divpercent" style="display:none">
                                 <div class="form-group row">
                                     <label class="col-sm-3 col-form-label">Percent <span style="color: red">*</span></label>
                                     <div class="col-sm-9">
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3" id="divbasis" style="display:none">
                                 <div class="form-group row">
                                     <label class="col-sm-3 col-form-label">Basis on <span style="color: red">*</span></label>
                                     <div class="col-sm-9">
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3" id="divdays" style="display:none">
                                 <div class="form-group row">
                                     <label class="col-sm-3 col-form-label">Days <span style="color: red">*</span></label>
                                     <div class="col-sm-9">
@@ -118,6 +118,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             @*<div class="col-md-3">
                                     <div class="form-group row">
                                         <label class="col-sm-3 col-form-label">Binary Perc(%)<span style="color: red">*</span></label>
@@ -150,7 +151,34 @@
                                         </div>
                                     </div>
                                 </div>*@
-
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-md-3" style="display:none" id="divgst">
+                                <div class="form-group row">
+                                    <label class="col-sm-3 col-form-label">GST(%)<span style="color: red">*</span></label>
+                                    <div class="col-sm-9">
+                                        @Html.TextBoxFor(m => m.IGST, new { @class = "form-control", @onkeypress = "return isNumberKey(event)",@onchange="return CalculateFinalAmount();" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3" style="display:none" id="divhsn">
+                                <div class="form-group row">
+                                    <label class="col-sm-3 col-form-label">HSN Code<span style="color: red">*</span></label>
+                                    <div class="col-sm-9">
+                                        @Html.TextBoxFor(m => m.HSNCode, new { @class = "form-control", })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3" style="display:none" id="divfinal">
+                                <div class="form-group row">
+                                    <label class="col-sm-3 col-form-label">Final Price<span style="color: red">*</span></label>
+                                    <div class="col-sm-9">
+                                        @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @disabled = "disabled" })
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-2">
                             <div class="col-md-6">
 
                                 @if (Model.Packageid == null)
@@ -163,12 +191,12 @@
                                     <a href="#" type="submit" id="btnUpdateProduct" class="btn btn-success" name="btnUpdateProduct" value="Update" onclick="return updateProduct();">Update</a>
                                 }
 
-                                @*<a class="btn btn-primary" href="/Master/PackageList">Back To List</a>*@
+                                <a class="btn btn-primary" href="/Master/PackageList">Back To List</a>
 
 
                             </div>
                         </div>
-                        <div class="widget-content widget-content-area br-6">
+                        @*<div class="widget-content widget-content-area br-6">
                             <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
                                 <thead>
                                     <tr>
@@ -182,6 +210,9 @@
                                         <th>From Amount</th>
                                         <th>To Amount</th>
                                         <th>In Multiple Of</th>
+                                        <th>IGST</th>
+                                        <th>HSN Code</th>
+                                        <th>Final Amount</th>
                                         <th>Status</th>
                                         <th>Action</th>
                                     </tr>
@@ -205,6 +236,9 @@
                                                     <td>@Item.FromAmount</td>
                                                     <td>@Item.ToAmount</td>
                                                     <td>@Item.InMultipleOf</td>
+                                                    <td>@Item.IGST</td>
+                                                    <td>@Item.HSNCode</td>
+                                                    <td>@Item.FinalAmount</td>
                                                     <td>@Item.Status</td>
                                                     <td>
                                                         <a href="/Master/PackageMaster?PackageID=@Item.Packageid" class="btn btn-info btn-sm">Edit</a>
@@ -219,7 +253,7 @@
                                     }
                                 </tbody>
                             </table>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -236,11 +270,34 @@
             $("#divfromamount").show();
             $("#divtoamount").show();
             $("#divmultiple").show();
+            $("#divpercent").show();
+            $("#divbasis").show();
+            $("#divdays").show();
+            $("#divgst").hide();
+            $("#divhsn").hide();
+            $("#divfinal").hide();
+        }
+        else if (packagetype == 1) {
+            $("#divfromamount").hide();
+            $("#divtoamount").hide();
+            $("#divmultiple").hide();
+            $("#divpercent").hide();
+            $("#divbasis").hide();
+            $("#divdays").hide();
+            $("#divgst").show();
+            $("#divhsn").show();
+            $("#divfinal").show();
         }
         else {
             $("#divfromamount").hide();
             $("#divtoamount").hide();
             $("#divmultiple").hide();
+            $("#divgst").hide();
+            $("#divhsn").hide();
+            $("#divfinal").hide();
+            $("#divpercent").hide();
+            $("#divbasis").hide();
+            $("#divdays").hide();
         }
     });
     function validate() {
@@ -317,6 +374,14 @@
 
         }
     }
+    function CalculateFinalAmount()
+    {
+        debugger;
+        var productprice = $('#ProductPrice').val();
+        var GST = (parseFloat($('#IGST').val()) / 100) * parseFloat($('#ProductPrice').val());
+        var final = parseFloat($('#ProductPrice').val()) + parseFloat(GST);
+        $("#FinalAmount").val(final);
+    }
     function checkAmount() {
         var fromamount = $("#FromAmount").val();
         var toamount = $("#ToAmount").val();
@@ -334,11 +399,34 @@
             $("#divfromamount").show();
             $("#divtoamount").show();
             $("#divmultiple").show();
+            $("#divpercent").show();
+            $("#divbasis").show();
+            $("#divdays").show();
+            $("#divgst").hide();
+            $("#divhsn").hide();
+            $("#divfinal").hide();
+        }
+        else if (packagetype == 1) {
+            $("#divfromamount").hide();
+            $("#divtoamount").hide();
+            $("#divmultiple").hide();
+            $("#divpercent").hide();
+            $("#divbasis").hide();
+            $("#divdays").hide();
+            $("#divgst").show();
+            $("#divhsn").show();
+            $("#divfinal").show();
         }
         else {
             $("#divfromamount").hide();
             $("#divtoamount").hide();
             $("#divmultiple").hide();
+            $("#divgst").hide();
+            $("#divhsn").hide();
+            $("#divfinal").hide();
+            $("#divpercent").hide();
+            $("#divbasis").hide();
+            $("#divdays").hide();
         }
     }
     function isNumberKey(evt) {
@@ -409,11 +497,28 @@
                 return false;
             }
         }
+        if ($('#PackageTypeId').val() == '1') {
+            if ($('#IGST').val() == '') {
+                $("#IGST").addClass('errortext');
+                $('#IGST').focus();
+                return false;
+            }
+            if ($('#HSNCode').val() == '') {
+                $("#HSNCode").addClass('errortext');
+                $('#HSNCode').focus();
+                return false;
+            }
+            if ($('#FinalAmount').val() == '') {
+                $("#FinalAmount").addClass('errortext');
+                $('#FinalAmount').focus();
+                return false;
+            }
+        }
         $.ajax({
             url: "/Master/SaveProduct",
             Type: "Get",
             DataType: "JSON",
-            data: { PackageType: $("#PackageTypeId").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), IGST: $("#IGST").val(), CGST: $("#CGST").val(), SGST: $("#SGST").val(), BinaryPercent: $("#BinaryPercent").val(), DirectPercent: $("#DirectPercent").val(), ROIPercent: $("#ROIPercent").val(), BV: $("#BV").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val() },
+            data: { PackageType: $("#PackageTypeId").val(), ProductName: $("#ProductName").val(), ProductPrice: $("#ProductPrice").val(), IGST: $("#IGST").val(),  ROIPercent: $("#ROIPercent").val(), BV: $("#BV").val(), FromAmount: $("#FromAmount").val(), ToAmount: $("#ToAmount").val(), Days: $("#Days").val(), InMultipleOf: $('#InMultipleOf').val(),  HSNCode: $('#HSNCode').val(), FinalAmount: $('#FinalAmount').val() },
             success: function (data) {
                 alert(data.Result);
                 window.location.href = '@Url.Action("PackageMaster", "Master")';
