--- a/MyTrade/Views/Admin/ViewLedger.cshtml
+++ b/MyTrade/Views/Admin/ViewLedger.cshtml
@@ -23,18 +23,27 @@
                     </div>
                     <div class="widget-content widget-content-area">
                         <div class="widget-content widget-content-area br-6">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                 <p style="color:#2196f3"><b>Login Id : @ViewBag.LoginId</b></p>
+                                </div>
+                                <div class="col-sm-3">
+                                    <p  style="color:#2196f3"><b>Name : @ViewBag.Name</b></p>
+                                </div>
+                            </div>
                             <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
-                                        <th>Login Id</th>
-                                        <th>Name</th>
+                                        @*<th>Login Id</th>
+                                        <th>Name</th>*@
                                         <th>Narration</th>
                                         <th>Cr Amount</th>
                                         <th>Dr Amount</th>
                                         <th>Balance</th>
                                         <th>TransactionBy</th>
                                         <th>Transaction No</th>
+                                        <th>Transaction Date</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -47,14 +56,15 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
-                                                    <td>@Item.LoginId</td>
-                                                    <td>@Item.Name</td>
+                                                    @*<td>@Item.LoginId</td>
+                                                    <td>@Item.Name</td>*@
                                                     <td>@Item.Narration</td>
                                                     <td>@Item.CrAmount</td>
                                                     <td>@Item.DrAmount</td>
                                                     <td>@Item.Balance</td>
                                                     <td>@Item.TransactionBy</td>
                                                     <td>@Item.TransactionNo</td>
+                                                    <td>@Item.TransactionDate</td>
                                                 </tr>
                                                 i++;
                                             }
@@ -63,12 +73,13 @@
                                 </tbody>
                                 <tfoot>
                                     <tr>
-                                        <th></th>
-                                        <th></th>
+                                        @*<th></th>
+                                        <th></th>*@
                                         <th></th>
                                         <th>Total </th>
                                         <th>@ViewBag.CrAmount</th>
                                         <th>@ViewBag.DrAmount</th>
+                                        <th></th>
                                         <th></th>
                                         <th></th>
                                     </tr>
