--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -114,6 +114,7 @@
                                         <th>Mobile No</th>
                                         <th>Email Id</th>
                                         <th>Member Status</th>
+                                        <th>Activation Mode</th>
                                         <th>Action</th>
                                         <th></th>
                                         <th></th>
@@ -138,6 +139,7 @@
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
                                                     <td>@Item.MemberStatus</td>
+                                                    <td>@Item.ActivationMode</td>
                                                     <td>
                                                         <a href="/AdminReports/ViewProfileForAdmin?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">Edit</a>
                                                         @*<a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>*@
