--- a/MyTrade/Views/AdminReports/TopupReport.cshtml
+++ b/MyTrade/Views/AdminReports/TopupReport.cshtml
@@ -73,12 +73,13 @@
                                         <th>TPS Percentage</th>
                                         <th>Days</th>
                                         <th>Date</th>
+                                        <th>Topup Via</th>
                                         @*<th>Action</th>*@
                                         @*<th>Upgradation Date</th>
-                                        <th>Payment Mode</th>
-                                            <th>Description</th>
-                                        <th>Price</th>
-                                        <th>Calculation Status</th>*@
+                                            <th>Payment Mode</th>
+                                                <th>Description</th>
+                                            <th>Price</th>
+                                            <th>Calculation Status</th>*@
                                         @*<th>Print</th>*@
                                     </tr>
                                 </thead>
@@ -102,12 +103,13 @@
                                                     <td>@Item.ROIPercentage %</td>
                                                     <td><a class="btn btn-info btn-sm" href="/Admin/ViewROIForAdmin?Id=@Item.Pk_investmentId&UserId=@Item.Fk_UserId">@Item.PackageDays</a></td>
                                                     <td>@Item.TopUpDate</td>
+                                                    <td>@Item.TopupVia</td>
                                                     @*<td><a class="btn btn-info btn-sm" href="/AdminReports/DeleteTopUp?Id=@Item.Pk_investmentId">Delete</a></td>*@
                                                     @*<td>@Item.UpgradtionDate</td>
-                                                    <td>@Item.PaymentMode</td>
-                                                        <td>@Item.Description</td>
-                                                    <td>@Item.Amount</td>
-                                                    <td>@Item.Status</td>*@
+                                                        <td>@Item.PaymentMode</td>
+                                                            <td>@Item.Description</td>
+                                                        <td>@Item.Amount</td>
+                                                        <td>@Item.Status</td>*@
                                                     @*<td>*@
                                                     @*<a href="/AdminReports/PrintReciept/@Item.LoginId">Print</a>*@
                                                     @*<a href="/AdminReports/PrintTopUp?ToLoginID=@Item.ToLoginID" class=       "btn btn-sm btn-primary" target="_blank">Print </a>*@
