--- a/MyTrade/Views/Admin/UnUsedPin.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPin.cshtml
@@ -116,7 +116,7 @@
                                             <th>Sr No.</th>
                                             <th>E-Pin No</th>
                                             <th>Pin Amount</th>
-                                            <th>GST(18%)</th>
+                                            <th>GST</th>
                                             <th>Total Amount</th>
                                             <th class="dt-no-sorting">Status</th>
                                             @*<th>Package</th>*@
