--- a/MyTrade/Views/Admin/UnUsedPinList.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPinList.cshtml
@@ -71,7 +71,7 @@
                                                     <td> @Item.UsedPin </td>
                                                     <td>@Item.AvailablePin</td>
                                                     <td>@Item.TransferPin</td>
-                                                    <td><a href="/Admin/UnUsedPin?Fk_UserId=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a></td>
+                                                    <td><a href="/Admin/UnUsedPin?Fk_UserId=@Item.Fk_UserId&Fk_ProductId=@Item.Fk_ProductId" class="btn btn-info btn-sm">View</a></td>
                                                 </tr>
                                                 i++;
                                             }
