--- a/MyTrade/Views/AdminReports/ActivateByPaymentList.cshtml
+++ b/MyTrade/Views/AdminReports/ActivateByPaymentList.cshtml
@@ -35,6 +35,7 @@
                             </div>
                             <div class="col-lg-3">
                                 Type
+                                <input type="hidden" id="UseFor" value="@Model.UsedFor" />
                                <select id="UsedFor" name="UsedFor" class="form-control">
                                    <option value="0">Select</option>
                                    <option value="Wallet">Wallet</option>
@@ -102,6 +103,9 @@
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script>
 
+    if ($("#UseFor").val() != 0) {
+        $("#UsedFor").val($("#UseFor").val()).attr("selected", "selected")
+    }
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
     });
