--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -201,19 +201,25 @@
 }
 <script src="~/plugins/flatpickr/flatpickr.js"></script>
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
-<script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
+<link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
+@*<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />*@
 <script>
-    debugger;
+  
+    var f3 = flatpickr(document.getElementById('FromDate'), {
+        //mode: "range"
+    });
+    var f3 = flatpickr(document.getElementById('ToDate'), {
+        //mode: "range"
+    });
+
+
+
     if ($("#MStatus").val() != 0) {
         $("#MemberStatus").val($("#MStatus").val()).attr("selected", "selected")
     }
-    $('#FromDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-    });
-    $('#ToDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-    });
+
+   
 </script>
