--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -50,7 +50,7 @@
                                         <th>Package Name</th>
                                         <th>Pin Amount</th>
                                         <th>BV</th>
-                                        <th>GST (18 %)</th>
+                                        <th>GST</th>
                                         <th>Total amount</th>
                                         <th>Pin Status</th>
                                         @*<th>Is Registered</th>*@
