--- a/MyTrade/Views/Wallet/AddWallet.cshtml
+++ b/MyTrade/Views/Wallet/AddWallet.cshtml
@@ -110,7 +110,7 @@
 
 <script>
     $(document).ready(function () {
-        //$("#PaymentType").val("Offline");
+        $("#PaymentType").val("1");
         //$("#PaymentType").val("");
         //getpaymentTypedetails();
     });
