--- a/MyTrade/Views/Admin/ViewGenerateEpinDetails.cshtml
+++ b/MyTrade/Views/Admin/ViewGenerateEpinDetails.cshtml
@@ -94,15 +94,16 @@
                                         <tr>
                                             <th>Sr No.</th>
                                             <th>E-Pin No</th>
-                                            <th>Pin Amount</th>
+                                            <th>Amount</th>
                                             <th>GST</th>
-                                            <th>Total Amount</th>
+                                            <th>Final Amount</th>
                                             <th class="dt-no-sorting">Status</th>
+                                            <th>Payment Mode</th>
                                             <th>Generated Date</th>
-                                            @if (Model.Status == "P")
+                                            @*@if (Model.Status == "P")
                                             {
                                                 <th>Registered To</th>
-                                            }
+                                            }*@
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -120,11 +121,12 @@
                                                         <td>@Item.GST</td>
                                                         <td>@Item.TotalAmount</td>
                                                         <td>@Item.PinStaus</td>
+                                                        <td>@Item.PaymentMode</td>
                                                         <td>@Item.AddedOn</td>
-                                                        @if (Item.PinStaus == "Used")
+                                                        @*@if (Item.PinStaus == "Used")
                                                         {
                                                             <td> @Item.RegisteredTo </td>
-                                                        }
+                                                        }*@
                                                     </tr>
                                                     i++;
                                                 }
