--- a/MyTrade/Views/Admin/DistributePayment.cshtml
+++ b/MyTrade/Views/Admin/DistributePayment.cshtml
@@ -9,14 +9,14 @@
 <link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
 <link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
 <style>
-    .table-responsive {
+    /*.table-responsive {
         display: block;
         width: 100%;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
         max-height: 350px !important;
         overflow-y: scroll;
-    }
+    }*/
 </style>
 @using (Html.BeginForm("DistributePayment", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
@@ -58,8 +58,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="widget-content widget-content-area br-12">
-                            <table id="html5-extension" class="table table-hover non-hover table-responsive" style="width:100%" data-page-length='6'>
+                        <div class="row">
+                            @*<div class="widget-content widget-content-area br-12">*@
+                            <table id="html5-extension" class="table table-hover non-hover table-responsive" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -73,19 +74,6 @@
                                         <th>Net Amount</th>
                                     </tr>
                                 </thead>
-                                <tfoot>
-                                    <tr>
-                                        <th></th>
-                                        <th></th>
-                                        <th></th>
-                                        <th>@ViewBag.TPPLevelIncome</th>
-                                        <th>@ViewBag.TPSLevelIncome </th>
-                                        <th>@ViewBag.GrossIncome</th>
-                                        <th>@ViewBag.TDS</th>
-                                        <th>@ViewBag.Processing</th>
-                                        <th>@ViewBag.NetIncome</th>
-                                    </tr>
-                                </tfoot>
                                 <tbody>
                                     @if (Model != null)
                                     {
@@ -112,12 +100,26 @@
                                     }
 
                                 </tbody>
+                                @*<tfoot>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th>@ViewBag.TPPLevelIncome</th>
+                                        <th>@ViewBag.TPSLevelIncome </th>
+                                        <th>@ViewBag.GrossIncome</th>
+                                        <th>@ViewBag.TDS</th>
+                                        <th>@ViewBag.Processing</th>
+                                        <th>@ViewBag.NetIncome</th>
+                                    </tr>
+                                </tfoot>*@
+                                
 
                             </table>
 
+                            </div>
+                            <input type="submit" class="btn btn-success" value="Distribute Payment" name="btnSearch" onclick="return Validate()" />
                         </div>
-                        <input type="submit" class="btn btn-success" value="Distribute Payment" name="btnSearch" onclick="return Validate()" />
-                    </div>
                 </div>
             </div>
         </div>
