--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -178,7 +178,7 @@
                 <div class="modal-body" style="color: black">
                     <div class="row">
                         <div class="col-md-12">
-                            @*<span style="color:red">Total Amount:</span> <span style="color:red" id="total"></span>*@
+                            <span style="color:red">Total Amount:</span> <span style="color:red" id="total"></span>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
@@ -237,6 +237,9 @@
 <script src="~/plugins/flatpickr/flatpickr.js"></script>
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+<link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script>
     if ($("#st").val() != 0) {
         $("#Status").val($("#st").val()).attr("selected", "selected");
@@ -250,7 +253,10 @@
         {
             // mode: "range"
         });
-   
+    $('#TransactionDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+    });
+
     const today = new Date();
     const yyyy = today.getFullYear();
     let mm = today.getMonth() + 1; // Months start at 0!
@@ -260,7 +266,7 @@
     if (mm < 10) mm = '0' + mm;
     const to = dd + '/' + mm + '/' + yyyy;
     document.getElementById('TransactionDate').value = to;
- 
+
     function isNumberKey(evt) {
 
         var charCode = (evt.which) ? evt.which : event.keyCode;
@@ -309,35 +315,38 @@
     }
     jQuery.noConflict();
     $(document).ready(function () {
-        var Amount = 0;
-        debugger;
-        $.noConflict();
         $('#ckbCheckAll').on('click', function () {
-            debugger;
             if (this.checked) {
                 $('.checkBoxClass').each(function (index) {
                     debugger;
+                    var Amount = 0;
                     this.checked = true;
-                    //Amount = parseInt(Amount) + parseInt($(this).val());
-                    //$("#total").text(Amount);
+                    $("table > tbody > tr").each(function () {
+                        if ($(this).find(".checkBoxClass").is(":checked")) {
+                            Amount = parseInt(Amount) + parseInt($(this).find('td').eq(5).text());
+                            $("#total").text(Amount);
+                        }
+                    });
                 });
             } else {
                 $('.checkBoxClass').each(function () {
                     this.checked = false;
+                    $("#total").text(0);
                 });
             }
-
             //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
         });
-
-
     });
     jQuery.noConflict();
-    var Amount1 = 0;
+
     $('.checkBoxClass').on('click', function () {
-        debugger;
-        //Amount1 = parseInt(Amount1) + parseInt($(this).val());
-        //$("#total").text(Amount1);
+        var Amount1 = 0;
+        $("table > tbody > tr").each(function () {
+            if ($(this).find(".checkBoxClass").is(":checked")) {
+                Amount1 = parseInt(Amount1) + parseInt($(this).find('td').eq(5).text());
+            }
+        });
+        $("#total").text(Amount1);
         if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
             $('#ckbCheckAll').prop('checked', true);
         } else {
