--- a/MyTrade/Views/AdminReports/DirectListForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/DirectListForAdmin.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyTrade.Models.Reports
+﻿@model MyTrade.Models.AssociateBooking
 
 @{
     ViewBag.Title = "DirectListForAdmin";
@@ -6,7 +6,7 @@
 }
 
 
-@using (Html.BeginForm("DirectListForAdmin", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("DirectListForAdmin", "AdminReports", FormMethod.Post, new { @id = "form1" }))
 {
     <div class="container">
         <div class="row layout-top-spacing">
@@ -15,161 +15,145 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>DownTeam Tree</h4>
-                                <span class="text-danger">
-                                    @TempData["pin"]
-                                </span>
+                                <h4>Direct List</h4>
+
                             </div>
                         </div>
                     </div>
-                    <div class="widget-content widget-content-area">
-                        <div class="widget-content widget-content-area br-6">
+                        <div class="widget-content widget-content-area">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <!-- HTML5 Export Buttons table start -->
+                                            <div class="row">
+                                                <div class="col-lg-3">
+                                                    <div class="form-group">
+                                                        <label>  LoginId </label>
+                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @onchange = "return GetNameDetails();" })
+                                                        @Html.HiddenFor(m => m.Fk_UserId)
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-3">
+                                                    <div class="form-group">
+                                                        <br />
+                                                        <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="Search" value="Search" onclick="return ValidateForm();" />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                </div>
+                                                <div>
+                                                    @if (ViewBag.Fk_SponsorId != "0")
+                                                    {
+                                                        <a href="/AdminReports/DirectListForAdmin?AssociateID=@ViewBag.Fk_SponsorId&FK_UserId=@Model.FK_RootId" id="btnDown" class="btn btn-info btn-sm">Back</a>
+                                                    }
+                                                </div>
+                                            </div>
+                                            <div class="dt-responsive table-responsive">
+                                                <table class="table table-hover non-hover" data-page-length='20' id="html5-extension">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>S No.</th>
+                                                            <th>LoginId</th>
+                                                            <th>Name</th>
+                                                            <th>Sponsor Id</th>
+                                                            <th>Sponsor Name</th>
+                                                            <th>Status</th>
+                                                            <th>Level</th>
+                                                            <th>Activation Date</th>
+                                                            <th></th>
 
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label>  LoginId </label>
-                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @onchange = "return GetNameDetails();" })
-                                        @Html.HiddenFor(m => m.Fk_UserId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label>From Date  </label>
-                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = true })
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label>To Date  </label>
-                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = true })
-                                    </div>
-                                </div>
-                                @*<div class="col-md-3">
-                                        <div class="form-group">
-                                            <label>Leg</label>
-                                            @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
-                                        </div>
-                                    </div>*@
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Status</label>
-                                        @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Self/Team</label>
-                                        <input type="hidden" id="hdf" value="@Model.DirectStatus">
-                                        <select id="DirectStatus" name="DirectStatus" class="form-control">
-                                            <option value="0">-select-</option>
-                                            <option value="Self">Self</option>
-                                            <option value="Team">Team</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3" style="margin-top:15px;">
-                                    <div class="form-group">
-                                        <br />
-                                        <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="Search" value="Search" onclick="return ValidateForm();" />
-                                    </div>
-                                </div>
-                            </div>
-                            <center>
-                                <div>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lstassociate != null)
-                                        {
-                                            <a href="/AdminReports/DirectListForAdmin?Ids=@Model.Ids&FK_UserId=@Model.Fk_UserId" id="btnDown" class="btn btn-info btn-sm">Next</a>
-                                        }
-                                        else if (Model.lstassociate == null)
-                                        {
-                                            <a href="/AdminReports/DirectListForAdmin?FK_UserId=@Model.Fk_UserId" id="btnDown" class="btn btn-info btn-sm">Back</a>
-                                        }
-                                    }
-                                </div>
-                            </center>
+                                                            @*<th>S No.</th>
+                                                                <th></th>
+                                                                <th>Sponsor Id</th>
+                                                                <th>Sponsor Name</th>
+                                                                <th>LoginId</th>
+                                                                <th>Name</th>
+                                                                <th>Status</th>
+                                                                <th>Activation Date</th>*@
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @if (Model != null)
+                                                        {
+                                                            if (Model.lstPlot != null)
+                                                            {
+                                                                int i = 1;
+                                                                foreach (var Item in Model.lstPlot)
+                                                                {
+                                                                    <tr class="text-left">
+                                                                        <td>@i</td>
+                                                                        <td>@Item.LoginId</td>
+                                                                        <td>@Item.FirstName</td>
+                                                                        <td>@Item.SponsorID</td>
+                                                                        <td>@Item.SponsorName</td>
 
-                            <!-- /.panel-heading -->
-                            <div class="table-responsive">
-                                <table class="table table-hover non-hover" data-page-length='20' id="html5-extension">
-                                    <thead>
-                                        <tr>
-                                            <th>Sr No.</th>
-                                            <th>LoginId</th>
-                                            <th>Name</th>
-                                            <th>Sponsor Id</th>
-                                            <th>Sponosor Name</th>
-                                            @*<th>Leg</th>*@
-                                            @*<th>Joining Date</th>*@
-                                            <th>Package</th>
-                                            <th>Activation Date</th>
-                                            <th>Level</th>
-                                            <th>Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @if (Model != null)
-                                        {
-                                            if (Model.lstassociate != null)
-                                            {
-                                                int i = 1;
-                                                foreach (var Item in Model.lstassociate)
-                                                {
-                                                    <tr class="text-left">
-                                                        <td>@i</td>
+                                                                        <td>
+                                                                            @if (Item.ActiveStatus == "Inactive")
+                                                                            {
+                                                                                <a href="#" id="btnDown" class="label label-danger">@Item.ActiveStatus</a>
+                                                                            }
+                                                                            else
+                                                                            {
+                                                                                <a href="#" id="btnDown" class="label label-success">@Item.ActiveStatus</a>
+                                                                            }
 
-                                                        <td>@Item.LoginId</td>
-                                                        <td>@Item.Name</td>
-                                                        <td>@Item.SponsorId</td>
-                                                        <td>@Item.SponsorName</td>
-                                                        @*<td>@Item.Mobile</td>
-                                                            <td>@Item.Email</td>*@
-                                                        @*<td>@Item.Leg</td>*@
-                                                        @*<td>@Item.JoiningDate</td>*@
-                                                        <td>@Item.Package</td>
-                                                        <td>@Item.PermanentDate</td>
-                                                        <td>@Item.Level</td>
-                                                        <td>@Item.Status</td>
+                                                                        </td>
+                                                                        <td>@Item.Lvl</td>
+                                                                        <td>@Item.ActivationDate</td>
+                                                                        <td>
+                                                                            @if (Item.Status == "Down")
+                                                                            {
 
-                                                    </tr>
-                                                    i++;
-                                                }
+                                                                                <a href="/AdminReports/DirectListForAdmin?AssociateID=@Item.Fk_UserId&FK_UserId=@Model.Fk_UserId" id="btnDown" class="btn btn-primary btn-sm">Next</a>
+                                                                            }
+                                                                            else
+                                                                            {
+                                                                                @*<a href="#" id="btnDown" class="btn btn-success btn-sm">Self</a>*@
+                                                                            }
 
-                                            }
-                                        }
-                                    </tbody>
-                                </table>
-                            </div>
+
+                                                                        </td>
+                                                                    </tr>
+                                                                    i++;
+                                                                }
+                                                            }
+                                                        }
+                                                    </tbody>
+                                                    @*<tfoot>
+                                                            <tr>
+                                                                <th>S No.</th>
+                                                                <th>LoginId</th>
+                                                                <th>Name</th>
+                                                                <th>Sponsor Id</th>
+                                                                <th>Sponsor Name</th>
+                                                                <th>Status</th>
+                                                                <th>Activation Date</th>
+                                                                <th></th>
+                                                            </tr>
+                                                        </tfoot>*@
+                                                </table>
+                                            </div>
+                                       
+                                    </div>
+                                </div>
                         </div>
-                    </div>
+                  
                 </div>
             </div>
         </div>
     </div>
+
 }
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
-
 <script>
-    $('#FromDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-    });
-    $('#ToDate').datepicker({
-        dateFormat: 'dd/mm/yy',
-    });
-</script>
-<script>
-    $(document).ready(function () {
-        $("#DirectStatus").val($("#hdf").val()).attr("selected", "selected");
-        $('#dataTables-example').DataTable({
-            responsive: true
-        });
-
-    });
+    function ValidateForm() {
+        $(".errortext").removeClass("errortext");
+        if ($('#LoginId').val() == '') {
+            $("#LoginId").addClass('errortext');
+            $('#LoginId').focus();
+            return false;
+        }
+    }
     function GetNameDetails() {
         debugger;
         var LoginId = $('#LoginId').val();
@@ -193,17 +177,4 @@
             }
         });
     }
-    function ValidateForm() {
-        $(".errortext").removeClass("errortext");
-        if ($('#LoginId').val() == '0') {
-            $("#LoginId").addClass('errortext');
-            $('#LoginId').focus();
-            return false;
-        }
-    }
 </script>
-
-
-
-
-
