--- a/MyTrade/Views/AdminReports/TopupReport.cshtml
+++ b/MyTrade/Views/AdminReports/TopupReport.cshtml
@@ -24,36 +24,49 @@
                     <div class="widget-content widget-content-area">
                         <div class="row">
                             <div class="col-lg-3">
-                                Login Id
-                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
-                                @Html.HiddenFor(m => m.ToLoginID)
+                                <div class="form-group">
+                                    Login Id
+                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                                    @Html.HiddenFor(m => m.ToLoginID)
+                                </div>
                             </div>
                             <div class="col-lg-3">
-                                Name
-                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                                <div class="form-group">
+                                    Name
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                                </div>
                             </div>
-
                             <div class="col-md-3">
-                                Status
-                                @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
+                                <div class="form-group">
+                                    Status
+                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
+                                </div>
                             </div>
                             <div class="col-lg-3">
-                                From Date
-                                @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                <div class="form-group">
+                                    Business Type
+                                    <select id="BusinessType" name="BusinessType" class="form-control">
+                                        <option value="">All Business</option>
+                                        <option value="1">New Business</option>
+                                        <option value="0">Other Business</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    From Date
+                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                </div>
                             </div>
                             <div class="col-lg-3">
-                                To Date
-                                @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                <div class="form-group">
+                                    To Date
+                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                </div>
                             </div>
-
-                            <div class="col-lg-3">
-                                Business Type
-                                <select id="BusinessType" name="BusinessType" class="form-control">
-                                    <option value="">All Business</option>
-                                    <option value="1">New Business</option>
-                                    <option value="0">Other Business</option>
-                                </select>
-                            </div>
+                          
                             <div class="col-lg-3">
                                 <br />
                                 <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
@@ -153,8 +166,8 @@
 <link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
 <link href="~/plugins/flatpickr/custom-flatpickr.css" rel="stylesheet" type="text/css">
 @*<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />*@
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />*@
 <script>
 
     var f3 = flatpickr(document.getElementById('FromDate'), {
