--- a/MyTrade/Views/AdminReports/TopupReport.cshtml
+++ b/MyTrade/Views/AdminReports/TopupReport.cshtml
@@ -89,7 +89,7 @@
                                         <th>TPS Percentage</th>
                                         <th>Days</th>
                                         <th>Date</th>
-                                        <th>Topup Via</th>
+                                        @*<th>Topup Via</th>*@
                                         <th>Delete</th>
                                         @*<th>Action</th>*@
                                         @*<th>Upgradation Date</th>
@@ -118,9 +118,9 @@
                                                     <td>@Item.TransactionBy</td>
                                                     <td>@Item.Status</td>
                                                     <td>@Item.ROIPercentage %</td>
-                                                    <td><a class="btn btn-info btn-sm" href="/Admin/ViewROIForAdmin?Id=@Item.Pk_investmentId&UserId=@Item.Fk_UserId">@Item.PackageDays</a></td>
+                                                    <td><a class="btn btn-info btn-sm" href="/Admin/ViewTPSForAdmin?Id=@Item.Pk_investmentId&UserId=@Item.Fk_UserId">@Item.PackageDays</a></td>
                                                     <td>@Item.TopUpDate</td>
-                                                    <td>@Item.TopupVia</td>
+                                                    @*<td>@Item.TopupVia</td>*@
                                                     @*<td><a class="btn btn-info btn-sm" href="/AdminReports/DeleteTopUp?Id=@Item.Pk_investmentId">Delete</a></td>*@
                                                     <td><a class="btn btn-danger btn-sm" href="/AdminReports/DeleteTopUp?Id=@Item.Pk_investmentId">Delete</a></td>
                                                     @*<td>@Item.UpgradtionDate</td>
