--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -80,7 +80,7 @@
                                                     <td>@Item.TransactionBy</td>
                                                     <td>@Item.Status</td>
                                                     <td>@Item.ROIPercentage %</td>
-                                                    <td><a class="btn btn-info btn-sm" href="/Wallet/ViewROI?InvId=@Item.InvestmentId">@Item.PackageDays</a></td>
+                                                    <td><a class="btn btn-info btn-sm" href="/Wallet/ViewTPS?InvId=@Item.InvestmentId">@Item.PackageDays</a></td>
                                                     <td>@Item.TopUpDate</td>
                                                 </tr>
                                                 i++;
