changes on Admin panel

--- a/MyTrade/Views/Admin/DistributedTPSList.cshtml
+++ b/MyTrade/Views/Admin/DistributedTPSList.cshtml
@@ -80,7 +80,7 @@
                                         <th>From Name</th>
                                         <th>Level</th>
                                         <th>Business Amount</th>
-                                        <th>BV</th>
+                                        <th>TopUp Amount</th>
                                         <th>Package</th>
                                         <th>Commision Amount</th>
                                         <th> (%)</th>
